feat: adds identity call
