# apps/api/src/identity/identity.controller.ts
@@ -1,7 +1,8 @@
 import { Controller, Get } from '@nestjs/common';
-import { CustomerId } from '../common';
+import { CustomerId, ZodApiBody } from '../common';
 import { CustomerRepository } from './customer.repository';
 import { ApiTags } from '@nestjs/swagger';
+import { GetCustomerResponse } from './schema/get-customer.request';
 
 @Controller('identity')
 @ApiTags('identity')
@@ -9,6 +10,7 @@ export class IdentityController {
   constructor(private customerRepository: CustomerRepository) {}
 
   @Get('me')
+  @ZodApiBody({ schema: GetCustomerResponse })
   async me(@CustomerId() customerId: string) {
     return this.customerRepository.getOne(customerId);
   }
